장바구니, 주문 서비스  구현(3)

--- a/src/main/resources/templates/item/adminItemForm.html
+++ b/src/main/resources/templates/item/adminItemForm.html
@@ -61,7 +61,7 @@
                 <td th:text="${info.author}"></td>
                 <td th:text="${info.publisher}"></td>
                 <td th:text="${info.isbn}"></td>
-                <td th:text="${info.discount}" class="price"> </td>
+                <td th:text="${info.price}" class="price"> </td>
             </tr>
             </tbody>
         </table>
