--- a/src/main/resources/templates/item/itemUpdate.html
+++ b/src/main/resources/templates/item/itemUpdate.html
@@ -89,8 +89,8 @@
 
                         <tr>
                             <td class="p-2 pr-4">가격</td>
-                            <td class="p-2"><input type="number" th:value="${bookDetail.discount}"
-                                                   name="discount"></td>
+                            <td class="p-2"><input type="number" th:value="${bookDetail.price}"
+                                                   name="price"></td>
                         </tr>
                         <tr>
                             <td class="p-2 pr-4">수량</td>
