--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -229,11 +229,11 @@
             <div class="fs18 font-weight-light">
                             <span class="input-group mt-2">
                                 <span th:id="'price_' + ${cartBook.cartBookId}"
-                                      th:data-price="${cartBook.discount}"
-                                      th:text="${cartBook.discount} + '원'" class="align-self-center mr-2">
+                                      th:data-price="${cartBook.price}"
+                                      th:text="${cartBook.price} + '원'" class="align-self-center mr-2">
                                 </span>
                                 <input type="number" name="count" th:id="'count_' + ${cartBook.cartBookId}"
-                                       th:value="${cartBook.stockNumber}" min="1"
+                                       th:value="${cartBook.count}" min="1"
                                        onchange="changeCount(this)" class="form-control mr-2" >
                                 <button type="button" class="close" aria-label="Close">
                                     <span aria-hidden="true" th:data-id="${cartBook.cartBookId}" onclick="deleteCartBook(this)">&times;</span>
@@ -244,7 +244,7 @@
         </td>
         <td class="text-center align-middle">
                     <span th:id="'totalPrice_' + ${cartBook.cartBookId}"
-                          name="totalPrice" th:text="${cartBook.discount * cartBook.stockNumber} + '원'">
+                          name="totalPrice" th:text="${cartBook.price * cartBook.count} + '원'">
                     </span>
         </td>
       </tr>
