--- a/src/main/resources/templates/item/itemAdd.html
+++ b/src/main/resources/templates/item/itemAdd.html
@@ -90,16 +90,16 @@
 
                         <tr>
                             <td class="p-2 pr-4">가격</td>
-                            <td class="p-2"><input type="number" readonly th:value="${bookDetail.discount}"
-                                                   name="discount"></td>
+                            <td class="p-2"><input type="number" readonly th:value="${bookDetail.price}"
+                                                   name="price"></td>
                         </tr>
                         <tr>
                             <td class="p-2 pr-4">수량</td>
-                            <td class="p-2"><input type="nuber" name="stockNumber" th:field="*{stockNumber}"></td>
+                            <td class="p-2"><input type="nuber" name="count" th:field="*{count}"></td>
                         </tr>
                     </table>
             <div class="container-fluid text-center bg-light p-3 mt-4 fixed-bottom">
-                <span class="mt-3 mr-5">총 상품금액 <b th:text="${bookDetail.discount}" style="font-size: 20px"
+                <span class="mt-3 mr-5">총 상품금액 <b th:text="${bookDetail.price}" style="font-size: 20px"
                                                   class="price"></b>원</span>
                 <button type="submit" class="btn ml-5 mt-4"
                         style="background-color:rgb(103,167,47); color: white; width: 200px">상품등록
