--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -30,7 +30,7 @@
                                      <div class="card-body">
                                          <h4 class="card-title">[[${book.title}]]</h4>
                                          <p class="card-text">[[${book.description}]]</p>
-                                         <h3 class="card-title text-danger">[[${book.discount}]]원</h3>
+                                         <h3 class="card-title text-danger">[[${book.price}]]원</h3>
                                      </div>
                                  </a>
                              </div>
