장바구니, 주문 서비스  구현(4)

--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -14,29 +14,43 @@
   <script th:inline="javascript">
 
     $(document).ready(function(){
+        let price_td = document.querySelectorAll(".price")
+
+        for(let i = 0; i<price_td.length; i++) {
+            let txt_price = price_td[i].innerText
+            txt_price *= 1
+
+            if(txt_price == 0) price_td[i].innerText = "절판"
+            else price_td[i].innerText = txt_price.toLocaleString()
+        }
+
+        checkAll();
+
       $("input[name=cartChkBox]").change( function(){
-        getOrderTotalPrice();
+          getOrderTotalPrice();
       });
     });
 
     function getOrderTotalPrice(){
       var orderTotalPrice = 0;
+
       $("input[name=cartChkBox]:checked").each(function() {
         var cartBookId = $(this).val();
-        var price = $("#price_" + cartBookId).attr("data-price");
-        var count = $("#count_" + cartBookId).val();
-        orderTotalPrice += price*count;
+        var price = $("#price_" + cartBookId).attr("data-price").replace(",","");
+        var count = $("#count_" + cartBookId).val()
+
+        orderTotalPrice += price*count*1;
       });
 
-      $("#orderTotalPrice").html(orderTotalPrice+'원');
+      $("#orderTotalPrice").html(orderTotalPrice.toLocaleString() + '원');
     }
 
     function changeCount(obj){
       var count = obj.value;
       var cartBookId = obj.id.split('_')[1];
-      var price = $("#price_" + cartBookId).data("price");
-      var totalPrice = count*price;
-      $("#totalPrice_" + cartBookId).html(totalPrice+"원");
+      var price = $("#price_" + cartBookId).attr("data-price").replace(",","");
+      var totalPrice = count*price * 1;
+      $("#totalPrice_" + cartBookId).html(totalPrice.toLocaleString());
       getOrderTotalPrice();
       updateCartBookCount(cartBookId, count);
     }
@@ -168,12 +182,7 @@
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
   <style>
-    .content-mg{
-      margin-left:25%;
-      margin-right:25%;
-      margin-top:2%;
-      margin-bottom:100px;
-    }
+
     .repImgDiv{
       margin-right:15px;
       margin-left:15px;
@@ -186,80 +195,86 @@
     .fs18{
       font-size:18px
     }
-    .fs24{
-      font-size:24px
+
+    table {
+      width: 100%;
     }
   </style>
 </th:block>
 
-<div layout:fragment="content" class="content-mg">
+<div layout:fragment="content">
 
-  <h2 class="mb-4">
-    장바구니 목록
-  </h2>
+  <section class="container">
+    <h3 class="mb-4 font-weight-bold">
+      장바구니
+    </h3>
 
-  <div>
+    <div class="container">
 
-    <table class="table">
-      <colgroup>
-        <col width="15%"/>
-        <col width="70%"/>
-        <col width="15%"/>
-      </colgroup>
-      <thead>
-      <tr class="text-center">
-        <td>
-          <input type="checkbox" id="checkall" onclick="checkAll()"> 전체선택
-        </td>
-        <td>상품정보</td>
-        <td>상품금액</td>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="cartBook : ${cartBooks}">
-        <td class="text-center align-middle">
-          <input type="checkbox" name="cartChkBox" th:value="${cartBook.cartBookId}">
-        </td>
-        <td class="d-flex">
-          <div class="repImgDiv align-self-center">
-            <img th:src="${cartBook.imageSrc}" class = "rounded repImg" th:alt="${cartBook.title}">
-          </div>
-          <div class="align-self-center">
-            <span th:text="${cartBook.title}" class="fs24 font-weight-bold"></span>
-            <div class="fs18 font-weight-light">
+      <table class="table">
+        <colgroup>
+          <col width="5%"/>
+          <col width="80%"/>
+          <col width="15%"/>
+        </colgroup>
+        <thead>
+        <tr class="">
+          <td>
+            <input type="checkbox" id="checkall" onclick="checkAll()" checked>
+          </td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="cartBook : ${cartBooks}">
+          <td class="align-middle">
+            <input type="checkbox" name="cartChkBox" th:value="${cartBook.cartBookId}">
+          </td>
+          <td class="d-flex">
+            <div class="repImgDiv ">
+<!--              align-self-center-->
+              <img th:src="${cartBook.imageSrc}" class = "rounded repImg" th:alt="${cartBook.title}">
+            </div>
+            <div class="">
+              <span th:text="${cartBook.title}" class="fs18 font-weight-bold"></span>
+              <div class="fs18 font-weight-light">
                             <span class="input-group mt-2">
                                 <span th:id="'price_' + ${cartBook.cartBookId}"
                                       th:data-price="${cartBook.price}"
-                                      th:text="${cartBook.price} + '원'" class="align-self-center mr-2">
-                                </span>
-                                <input type="number" name="count" th:id="'count_' + ${cartBook.cartBookId}"
-                                       th:value="${cartBook.count}" min="1"
-                                       onchange="changeCount(this)" class="form-control mr-2" >
-                                <button type="button" class="close" aria-label="Close">
-                                    <span aria-hidden="true" th:data-id="${cartBook.cartBookId}" onclick="deleteCartBook(this)">&times;</span>
-                                </button>
+                                      th:text="${cartBook.price}" class="align-self-center price mr-2">
+                                </span><span>원</span>
                             </span>
+              </div>
             </div>
-          </div>
-        </td>
-        <td class="text-center align-middle">
-                    <span th:id="'totalPrice_' + ${cartBook.cartBookId}"
-                          name="totalPrice" th:text="${cartBook.price * cartBook.count} + '원'">
-                    </span>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+          </td>
+          <td class="text-center align-middle">
+                    <span class="font-weight-bold price" th:id="'totalPrice_' + ${cartBook.cartBookId}"
+                          name="totalPrice" th:text="${cartBook.price * cartBook.count}" style="font-size: 20px">
+                    </span><span>원</span> <br>
+            <input type="number" name="count" th:id="'count_' + ${cartBook.cartBookId}"
+                   th:value="${cartBook.count}" min="1"
+                   onchange="changeCount(this)" class="form-control mr-2 mt-2" >
+          </td>
+          <td><button type="button" class="close" aria-label="Close">
+            <span aria-hidden="true" th:data-id="${cartBook.cartBookId}" onclick="deleteCartBook(this)">&times;</span>
+          </button></td>
 
-    <h2 class="text-center">
-      총 주문 금액 : <span id="orderTotalPrice" class="text-danger">0원</span>
-    </h2>
+        </tr>
+        </tbody>
+      </table>
 
-    <div class="text-center mt-3">
-      <button type="button" class="btn btn-primary btn-lg" onclick="orders()">주문하기</button>
+      <h3 class="text-center mt-4">
+        총 주문 금액 : <span id="orderTotalPrice" class="text-danger price">0원</span>
+      </h3>
+
+      <div class="text-center mt-3">
+        <button type="button" class="btn" style="background-color:rgb(103,167,47); color: white; width: 200px" onclick="orders()">주문하기</button>
+      </div>
+
     </div>
-
-  </div>
+  </section>
 
 </div>
 
