--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -18,11 +18,12 @@ nav {
 
 a {
     text-decoration:none;
+    color: black;
 }
 
 .navbar-nav input {
     margin-left: 30px;
-    width: 450px;
+    width: 400px;
     height: 40px;
     padding: 10px;
     border-radius: 50px;
