--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,6 +3,86 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<th:block layout:fragment="css">
+    <style>
+        .icon_ul {
+            display: -webkit-box;
+            flex-direction: row;
+            align-items: center;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .icon_ul li{
+            flex: 0 0 90px;
+            display: list-item;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        .item a {
+            display: block;
+            color: #595959;
+            font-size: 14px;
+            line-height: 22px;
+            letter-spacing: -0.01em;
+            text-decoration: none;
+        }
+        .item a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_1.svg");
+            content: "";
+            display: block;
+            width: 68px;
+            height: 68px;
+            margin: 0 auto 10px;
+        }
+        .item_2 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_2.svg");
+        }
+        .item_3 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_3.svg");
+        }
+        .item_4 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_4.svg");
+        }
+
+        .item_5 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_5.svg");
+        }
+
+        .item_6 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_6.svg");
+        }
+
+        .item_7 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_7.svg");
+        }
+
+        .item_8 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_8.svg");
+        }
+
+        .item_9 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_9.svg");
+        }
+
+        .item_10 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_10.svg");
+        }
+
+        .item_12 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_12.svg");
+        }
+
+        .item_13 a:before {
+            background-image: url("https://contents.kyobobook.co.kr/resources/fo/images/welcome/ink/ico_welcome_marketing_13.svg");
+        }
+
+    </style>
+</th:block>
+
          <div layout:fragment="content">
              <header class="container mb-5">
 
@@ -13,46 +93,88 @@
 
              <br>
 
-             <section class="mt-5 mb-5 container">
-                 <h3 class="mt-5 mb-4"><b>새로 추가된 상품</b></h3>
+             <section class="container mb-5" style="color: black">
+                 <ul class="icon_ul">
+                     <li class="item item_1">
+                         <a href="https://www.kyobobook.co.kr/benefit">
+                            할인혜택</a>
+                     </li>
+                     <li class="item item_2">
+                         <a href="https://www.kyobobook.co.kr/picks">
+                             Picks</a>
+                     </li>
+                     <li class="item item_3">
+                         <a href="https://product.kyobobook.co.kr/KYO">교보ONLY</a>
+                     </li>
+                     <li class="item item_4">
+                         <a href="https://event.kyobobook.co.kr/monthly-book">이달의 책</a>
+                     </li>
+                     <li class="item item_5">
+                         <a href="https://product.kyobobook.co.kr/booknflower/main">책 그리고 꽃</a>
+                     </li>
+                     <li class="item item_6">
+                         <a href="https://www.kyobobook.co.kr/present/main">선물하기</a>
+                     </li>
+                     <li class="item item_7">
+                         <a href="https://www.kyobobook.co.kr/review">통합리뷰</a>
+                     </li>
+                     <li class="item item_8">
+                         <a href="https://www.kyobobook.co.kr/recommend/main">추천</a>
+                     </li>
+                     <li class="item item_9">
+                         <a href="https://www.kyobobook.co.kr/service/profile/main">인물&amp;작품</a>
+                     </li>
+                     <li class="item item_10">
+                         <a href="https://www.kyobobook.co.kr/handwriting">손글쓰기캠페인</a>
+                     </li>
+                     <li class="item item_13">
+                         <a href="https://www.kyobobook.co.kr/culture/big10">명강의Big10</a>
+                     </li>
+                     <li class="item item_12">
+                         <a href="https://www.kyobobook.co.kr/giftcard">기프트카드</a>
+                     </li>
+                 </ul>
+             </section>
+
+
+             <section class="mt-5 mb-5 container new_book">
+                 <h3 class="mt-5 mb-2"><b>화제의 신상</b></h3>
 
                  <input type="hidden" name="searchQuery" th:value="${bookSearchDto.searchQuery}">
                  <div th:if="${not #strings.isEmpty(bookSearchDto.searchQuery)}" class="center">
                      <p class="h3 font-weight-bold" th:text="${bookSearchDto.searchQuery} + '검색 결과'"></p>
                  </div>
-
-                 <div class="row">
-                     <th:block th:each="book, status: ${books.getContent()}">
-                         <div class="col-md-2 margin">
-                             <div class="card">
-                                 <a th:href="@{/book/detail/{bookId}(bookId=${book.id})}" class="text-dark">
-                                     <img th:src="${book.imageSrc}" class="card-img-top" th:alt="${book.title}" height="400">
-                                     <div class="card-body">
-                                         <h4 class="card-title">[[${book.title}]]</h4>
-                                         <p class="card-text">[[${book.description}]]</p>
-                                         <h3 class="card-title text-danger">[[${book.price}]]원</h3>
-                                     </div>
-                                 </a>
-                             </div>
+                 <div class="d-flex row flex-row justify-content-start">
+                 <th:block th:each="book, status: ${books.getContent()}">
+<!--                     <div class="mt-4 flex-fill" style="flex-basis:0px">-->
+                         <div class="mt-4 col-3">
+                             <a th:href="@{/book/detail/{bookId}(bookId=${book.id})}" style="color:black; text-decoration: none">
+                                 <img th:src="${book.imageSrc}" class="card-img-top" th:alt="${book.title}" style="width: 93%"><br><br>
+                                 <span><b>[[${book.title}]]</b></span> <br>
+                                 <small>[[${book.author}]] | [[${book.publisher}]]</small>
+                             </a>
                          </div>
-                     </th:block>
+                 </th:block>
                  </div>
+
                  <div th:with="start=${(books.number/maxPage)*maxPage + 1}, end=(${(books.totalPages == 0) ? 1 : (start + (maxPage - 1) < books.totalPages ? start + (maxPage - 1) : books.totalPages)})" >
+
                      <ul class="pagination justify-content-center">
 
                          <li class="page-item" th:classappend="${books.number eq 0}?'disabled':''">
-                             <a th:href="@{'/' + '?searchQuery=' + ${bookSearchDto.searchQuery} + '&page=' + ${books.number - 1}}" aria-label='Previous' class="page-link">
-                                 <span aria-hidden='true'>Previous</span>
+                             <a th:href="@{'/' + '?searchQuery=' + ${bookSearchDto.searchQuery} + '&page=' + ${books.number - 1}}" aria-label='Previous' class="ml-3 mr-3">
+<!--                                 class="page-link"-->
+                                 <span aria-hidden='true'><i class="fas fa-backward"></i></span>
                              </a>
                          </li>
 
                          <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${books.number eq page - 1}?'active':''">
-                             <a th:href="@{'/' +'?searchQuery=' + ${bookSearchDto.searchQuery} + '&page=' + ${page - 1}}" th:inline="text" class="page-link">[[${page}]]</a>
+                             <a th:href="@{'/' +'?searchQuery=' + ${bookSearchDto.searchQuery} + '&page=' + ${page - 1}}" th:inline="text" class="ml-3 mr-3">[[${page}]]</a>
                          </li>
 
                          <li class="page-item" th:classappend="${books.number+1 ge books.totalPages}?'disabled':''">
-                             <a th:href="@{'/' +'?searchQuery=' + ${bookSearchDto.searchQuery} + '&page=' + ${books.number+1}}" aria-label='Next' class="page-link">
-                                 <span aria-hidden='true'>Next</span>
+                             <a th:href="@{'/' +'?searchQuery=' + ${bookSearchDto.searchQuery} + '&page=' + ${books.number+1}}" aria-label='Next' class="ml-3 mr-3">
+                                 <span aria-hidden='true'><i class="fas fa-forward"></i></span>
                              </a>
                          </li>
 
@@ -168,7 +290,7 @@
              </section>
 
              <section class="mt-5 mb-5 container new_book">
-                 <h3 class="mt-5"><b>화제의 신상</b></h3>
+                 <h3 class="mt-5"><b>베스트</b></h3>
                  <div class="d-flex">
                      <div class="mt-4 flex-fill" style="flex-basis:0px">
                          <img src="https://contents.kyobobook.co.kr/sih/fit-in/300x0/pdt/9791198043306.jpg" style="width: 93%"><br><br>
