--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -12,6 +12,18 @@
 <th:block layout:fragment="script">
 
   <script th:inline="javascript">
+    $(document).ready(function(){
+      let price_td = document.querySelectorAll(".price")
+
+      for(let i = 0; i<price_td.length; i++) {
+        let txt_price = price_td[i].innerText
+        txt_price *= 1
+
+        if(txt_price == 0) price_td[i].innerText = "절판"
+        else price_td[i].innerText = txt_price.toLocaleString()
+      }
+    });
+
     function cancelOrder(orderId) {
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
@@ -55,12 +67,6 @@
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
   <style>
-    .content-mg{
-      margin-left:30%;
-      margin-right:30%;
-      margin-top:2%;
-      margin-bottom:100px;
-    }
     .repImgDiv{
       margin-right:15px;
       margin-left:15px;
@@ -85,41 +91,58 @@
   </style>
 </th:block>
 
-<div layout:fragment="content" class="content-mg">
+<div layout:fragment="content" >
 
-  <h2 class="mb-4">
-    구매 이력
-  </h2>
+  <section class="container">
+    <h3 class="mb-4 font-weight-bold">
+    주문/배송 목록
+    </h3>
 
 
   <div th:each="order : ${orders.getContent()}">
 
-
-    <div class="d-flex mb-3 align-self-center">
-      <h4 th:text="${order.orderDate} + ' 주문'"></h4>
-      <div class="ml-3">
-        <th:block th:if="${order.orderStatus == T(com.book.constant.OrderStatus).ORDER}">
-          <button type="button" class="btn btn-outline-secondary" th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문취소</button>
-        </th:block>
-        <th:block th:unless="${order.orderStatus == T(com.book.constant.OrderStatus).ORDER}">
-          <h4>(취소 완료)</h4>
-        </th:block>
-      </div>
-    </div>
-    <div class="card d-flex">
-      <div th:each="orderBook : ${order.orderBookDtoList}" class="d-flex mb-3">
-        <div class="repImgDiv">
+    <table class="table">
+      <colgroup>
+        <col width="20%"/>
+        <col width="55%"/>
+        <col width="10%"/>
+        <col width="15%"/>
+      </colgroup>
+      <thead>
+      <tr class="">
+        <td colspan="4">
+          <h4 th:text="${order.orderDate}" class="fs18 font-weight-bold"></h4>
+        </td>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="orderBook : ${order.orderBookDtoList}">
+        <td class="align-middle">
           <img th:src="${orderBook.imageSrc}" class = "rounded repImg" th:alt="${orderBook.title}">
-        </div>
-        <div class="align-self-center w-75">
-          <span th:text="${orderBook.title}" class="fs24 font-weight-bold"></span>
-          <div class="fs18 font-weight-light">
-            <span th:text="${orderBook.orderPrice} +'원'"></span>
-            <span th:text="${orderBook.count} +'개'"></span>
+        </td>
+        <td class="d-flex align-middle">
+          <div class="repImgDiv ">
+            <span th:text="${orderBook.title}" class="fs18 font-weight-bold"></span>
+            <br><br>
+            <span class="text-secondary">수량 : </span> <span th:text="${orderBook.count}" class="mt-3 text-secondary"></span>
           </div>
-        </div>
-      </div>
-    </div>
+        </td>
+        <td class="text-center align-middle">
+          <span th:text="${orderBook.orderPrice}" class="font-weight-bold price"></span><span>원</span>
+        </td>
+        <td class="align-middle">
+          <th:block th:if="${order.orderStatus == T(com.book.constant.OrderStatus).ORDER}">
+            <button type="button" class="btn btn-outline-secondary" th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문취소</button>
+          </th:block>
+          <th:block th:unless="${order.orderStatus == T(com.book.constant.OrderStatus).ORDER}">
+            <h5>(취소 완료)</h5>
+          </th:block>
+        </td>
+
+      </tr>
+      </tbody>
+    </table>
+
 
   </div>
 
@@ -128,7 +151,7 @@
 
       <li class="page-item" th:classappend="${orders.number eq 0}?'disabled':''">
         <a th:href="@{'/orders/' + ${orders.number - 1}}" aria-label='Previous' class="page-link">
-          <span aria-hidden='true'>Previous</span>
+          <span aria-hidden='true'><i class="fas fa-backward"></i></span>
         </a>
       </li>
 
@@ -138,14 +161,13 @@
 
       <li class="page-item" th:classappend="${orders.number+1 ge orders.totalPages}?'disabled':''">
         <a th:href="@{'/orders/' + ${orders.number + 1}}" aria-label='Next' class="page-link">
-          <span aria-hidden='true'>Next</span>
+          <span aria-hidden='true'><i class="fas fa-forward"></i></span>
         </a>
       </li>
 
     </ul>
   </div>
 
-
+  </section>
 </div>
-
 </html>
