일반 사용자 검색 기능 구현(1)

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,11 +31,10 @@
                         <a class="nav-link" href="/admin/items" style="color:black">상품 관리</a>
                     </li>
 
-                    <form action="/user/item/search" method="post">
+                    <form action="/book/search/" method="post">
                         <input type="text" placeholder="키워드를 입력하세요" name="title">
                         <button type="submit" style="background:none; border: none;"><i class="ml-3 fas fa-search fa-2x" style="color: rgb(103,167,47);"></i></button>
                     </form>
-
                 </ul>
                 <span class="navbar-text" sec:authorize="hasAnyAuthority('ROLE_USER')">
                     <a href="/cart"  class="p-2" style="color:black"><i class="fas fa-shopping-cart fa-2x"></i></a>
