--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -3,7 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
-
+<head>
+  <meta name="_csrf" th:content="${_csrf.token}"/>
+  <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+</head>
 <th:block layout:fragment="css">
   <style>
     a {
@@ -20,12 +23,53 @@
     })
 
 
+    function addCart(){
+      var token = $("meta[name='_csrf']").attr("content");
+      var header = $("meta[name='_csrf_header']").attr("content");
+
+      var url = "/cart";
+      var paramData = {
+        bookId : $("#bookId").val(),
+        count : 1
+      };
+
+      var param = JSON.stringify(paramData);
+
+      $.ajax({
+        url      : url,
+        type     : "POST",
+        contentType : "application/json",
+        data     : param,
+        beforeSend : function(xhr){
+          /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+          xhr.setRequestHeader(header, token);
+        },
+        dataType : "json",
+        cache   : false,
+        success  : function(result, status){
+          alert("상품을 장바구니에 담았습니다.");
+          location.href='/';
+        },
+        error : function(jqXHR, status, error){
+
+          if(jqXHR.status == '401'){
+            alert('로그인 후 이용해주세요');
+            location.href='/members/login';
+          } else{
+            alert(jqXHR.responseText);
+          }
+
+        }
+      });
+    }
+
+
   </script>
 </th:block>
 
 <div layout:fragment="content">
   <p><b>전체 <span th:text="${total}" style="color: rgb(103,167,47);"></span>건</b></p>
-  <form action="/user/item/cart" method="post">
+<!--  <form >-->
 
     <table class="table">
       <thead>
@@ -40,13 +84,15 @@
       </thead>
       <tbody>
       <tr th:each="info, status:${bookInfos}">
-        <td><a th:href="@{/user/book/detail/{id}(id=${status.index})}"><img th:src="${info.imageSrc}" style="width: 65px"; height="95px"></a> </td>
-        <td><a th:href="@{/user/book/detail/{id}(id=${status.index})}" th:text="${info.title}"></a></td>
+        <input type="hidden" id="bookId" th:value="${info.getId()}">
+        <td><a th:href="@{/book/detail/{bookId}(bookId=${info.getId()})}"><img th:src="${info.imageSrc}" style="width: 65px"; height="95px"></a> </td>
+        <td><a th:href="@{/book/detail/{bookId}(bookId=${info.getId()})}" th:text="${info.title}"></a></td>
         <td th:text="${info.author}"></td>
         <td th:text="${info.publisher}"></td>
         <td th:text="${info.price}" class="price"> </td>
         <td>
-          <button type="button" class="text-center btn btn-primary addBtn"  data-toggle="modal" data-target="#exampleModal">
+<!--          data-target="#exampleModal"-->
+          <button type="submit" class="text-center btn btn-primary addBtn"  onclick="addCart()" data-toggle="modal">
             <!--            data-toggle="modal" data-target="#exampleModal"-->
             <input type="hidden"> <input type="hidden"> <input type="hidden">
             <input type="hidden" class="hiddenValue">
@@ -78,28 +124,10 @@
         </div>
       </div>
     </div>
-  </form>
+<!--  </form>-->
 
   <script>
 
-    const buttons = document.querySelectorAll(".addBtn");
-
-    buttons.forEach((el, index) => {
-      el.onclick = (e) => {
-        const target = e.target;
-        let imageSrc = e.target.parentElement.parentElement.children[0].childNodes[0].src;
-
-        document.querySelector(".hiddenValue").setAttribute("name", "index");
-        document.querySelector(".hiddenValue").setAttribute("value", index);
-
-        target.children[0].setAttribute("name","title");
-        target.children[0].setAttribute("value",target.parentElement.parentElement.children[1].innerHTML);
-        target.children[1].setAttribute("name","price");
-        target.children[1].setAttribute("value",target.parentElement.parentElement.children[4].innerHTML);
-        target.children[2].setAttribute("name","imageSrc");
-        target.children[2].setAttribute("value",imageSrc);
-      }
-    });
 
     let price_td = document.querySelectorAll(".price")
 
