장바구니 삭제 오류 수정

--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -96,11 +96,14 @@
     }
 
     function deleteCartBook(obj){
+        debugger;
       var cartBookId = obj.dataset.id;
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
 
       var url = "/cartBook/" + cartBookId;
+
+        debugger;
 
       $.ajax({
         url      : url,
