--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -31,15 +31,16 @@
     <h3><b>로그인</b></h3>
   <form role="form" method="post" action="/members/login">
     <div class="form-group">
-<!--      <label th:for="email">이메일</label>-->
-<!--      <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">-->
         <input type="text" name="userid" class="form-control" placeholder="아이디를 입력해주세요">
     </div>
     <div class="form-group">
-<!--      <label th:for="password">비밀번호</label>-->
       <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요">
     </div>
     <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+
+      <span><a th:href="@{/members/find(action='id')}">아이디 찾기 </a></span>
+      <span><a th:href="@{/members/find(action='passwd')}">/ 비밀번호 찾기 </a></span>
+
     <button class="btn" style="background-color: rgb(103,167,47); color: white">로그인</button>
     <button type="button" class="joinBtn btn mt-2" onClick="location.href='/members/new'">회원가입</button>
     <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}">
